--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@main                   
       - name: FTP-Deploy-Action
-        uses: SamKirkland/FTP-Deploy-Action@2.0.0   
+        uses: SamKirkland/FTP-Deploy-Action@4.0.0   
         env:                                        
           FTP_SERVER: ${{ secrets.FTP_SERVER }}     
           FTP_USERNAME: ${{ secrets.FTP_USERNAME }} 
@@ -18,9 +18,4 @@ jobs:
           LOCAL_DIR: ./                           
           REMOTE_DIR: "otake-slsc.org/public_html/ftpdeployer/"
         with: 
-          exclude: .git*
-            - .git*/**
-            -  **/.git*/**
-            - .github**
-            - .github*/**
-            -  **/.github*/**
+          exclude: .github*/**
