--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,10 @@ jobs:
       - uses: actions/checkout@main                   
       - name: FTP-Deploy-Action
         uses: SamKirkland/FTP-Deploy-Action@4.0.0   
-        env:                                        
-          FTP_SERVER: ${{ secrets.FTP_SERVER }}     
-          FTP_USERNAME: ${{ secrets.FTP_USERNAME }} 
-          FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }} 
-          LOCAL_DIR: ./                           
-          REMOTE_DIR: "otake-slsc.org/public_html/ftpdeployer/"
         with: 
+          server: ${{ secrets.FTP_SERVER }} 
+          username: ${{ secrets.FTP_USERNAME }} 
+          password: ${{ secrets.FTP_PASSWORD }} 
+          local-dir: ./                           
+          server-dir: "otake-slsc.org/public_html/ftpdeployer/"
           exclude: .github*/**
